beta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minigolf
  namespace: minigolf-beta
  labels:
    app: minigolf
spec:
  type: ClusterIP
  selector:
    app: minigolf
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
